--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
   <meta charset="UTF-8">
   <title>Registrar Pedido</title>
 </head>
 <body>
   <h2>Registrar Pedido</h2>
-
   <form id="pedidoForm">
-    <label for="nombre">Nombre:</label><br>
-    <input type="text" id="nombre" name="nombre" required><br><br>
+    <label>Nombre:</label><br>
+    <input type="text" name="nombre" required><br><br>
 
-    <label for="cedula">Cédula:</label><br>
-    <input type="text" id="cedula" name="cedula" required><br><br>
+    <label>Cédula:</label><br>
+    <input type="text" name="cedula" required><br><br>
 
-    <label for="producto">Tipo de Producto:</label><br>
-    <select id="producto" name="producto" required>
+    <label>Tipo de Producto:</label><br>
+    <select name="producto" required>
       <option value="Almuerzo especial empleado">Almuerzo especial empleado</option>
       <option value="Bandeja especial empleado">Bandeja especial empleado</option>
       <option value="Almuerzo empleado">Almuerzo empleado</option>
@@ -28,35 +27,30 @@
   </form>
 
   <script>
-    document.getElementById("pedidoForm").addEventListener("submit", function(e) {
+    const form = document.getElementById("pedidoForm");
+
+    form.addEventListener("submit", function(e) {
       e.preventDefault();
 
-      const nombre = document.getElementById("nombre").value.trim();
-      const cedula = document.getElementById("cedula").value.trim();
-      const producto = document.getElementById("producto").value;
+      const formData = new FormData(form);
+      const nombre = formData.get("nombre");
+      const cedula = formData.get("cedula");
+      const producto = formData.get("producto");
 
-      const formData = new FormData();
-      formData.append("nombre", nombre);
-      formData.append("cedula", cedula);
-      formData.append("producto", producto);
+      // Construye la URL para el Web App de Apps Script
+      const url = "https://script.google.com/macros/s/AKfycbxoxb7yRQMsaZvjtW_PKCXpzucyp2GWVaTALc69vGZj8w7-d0oxjFNNXYtHlkqq90cK/exec";
 
-      fetch("https://script.google.com/macros/s/AKfycbxoxb7yRQMsaZvjtW_PKCXpzucyp2GWVaTALc69vGZj8w7-d0oxjFNNXYtHlkqq90cK/exec", {
-        method: "POST",
-        body: formData
-      })
-      .then(response => {
-        if (response.ok) {
-          // Redirige al QR generado con la cédula
-          const qrURL = "https://script.google.com/macros/s/AKfycbxoxb7yRQMsaZvjtW_PKCXpzucyp2GWVaTALc69vGZj8w7-d0oxjFNNXYtHlkqq90cK/exec?qr=" + encodeURIComponent(cedula);
-          window.location.href = qrURL;
-        } else {
-          alert("Error al enviar el pedido.");
-        }
-      })
-      .catch(error => {
-        console.error("Error:", error);
-        alert("Ocurrió un error al procesar el pedido.");
-      });
+      // Enviar los datos por GET (puedes cambiar a POST si actualizas el script)
+      fetch(`${url}?nombre=${encodeURIComponent(nombre)}&cedula=${encodeURIComponent(cedula)}&producto=${encodeURIComponent(producto)}`)
+        .then(response => {
+          if (!response.ok) throw new Error("Error en el envío.");
+          // Redirigir a la vista del QR con ?qr=cedula
+          window.location.href = `${url}?qr=${encodeURIComponent(cedula)}`;
+        })
+        .catch(error => {
+          alert("Ocurrió un error. Revisa la consola para más detalles.");
+          console.error(error);
+        });
     });
   </script>
 </body>
