--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Pedido de Comida</title>
+  <title>Formulario de Pedido</title>
 </head>
 <body>
   <h2>Registrar Pedido</h2>
