--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
     <label>Tipo de Producto:</label><br>
     <select name="producto" required>
-      <option value="Almuerzo especial empleado">Almuerzo especial empleado</option>
-      <option value="Bandeja especial empleado">Bandeja especial empleado</option>
-      <option value="Almuerzo empleado">Almuerzo empleado</option>
-      <option value="Bandeja empleado">Bandeja empleado</option>
-      <option value="Desayuno empleado">Desayuno empleado</option>
-      <option value="Cena empleado">Cena empleado</option>
+      <option value="Almuerzo Especial">Almuerzo Especial</option>
+      <option value="Bandeja Especial">Bandeja Especial</option>
+      <option value="Almuerzo">Almuerzo</option>
+      <option value="Bandeja">Bandeja</option>
+      <option value="Desayuno">Desayuno</option>
+      <option value="Cena">Cena</option>
     </select><br><br>
 
     <button type="submit">Enviar Pedido</button>
